<resources>
    <string name="app_name">UARKRegisterApp</string>
    <string name="title_activity_products_listing">Products</string>
    <string name="title_activity_product_view">ProductViewActivity</string>
    <string name="button_save">Save</string>
    <string name="button_ok">OK</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_all_products">Show All Products</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_begin_transaction">Begin Transaction</string>
    <string name="button_create_employee">Create Employee</string>
    <string name="button_product_sales_report">Report: Product</string>
    <string name="button_cashier_sales_report">Report: Cashier</string>
    <string name="button_log_out">Log Out</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_create_product">Create Product</string>
    <string name="text_view_landing_welcome">UARK Register App</string>
    <string name="text_view_please_sign_in">Please Sign In</string>
    <string name="text_view_products_lookup_code">LookupCode</string>
    <string name="text_view_sign_in_employee_id">Employee ID</string>
    <string name="text_view_sign_in_password">Password</string>
    <string name="text_view_products_count">0</string>
    <string name="text_view_products_created_on">01/01/1970</string>
    <string name="text_view_label_products_lookup_code">Lookup Code:</string>
    <string name="text_view_label_products_count">Count:</string>
    <string name="text_view_label_products_created_on">Created On:</string>
    <string name="edit_text_hint_employee_create_first_name">First name</string>
    <string name="edit_text_hint_employee_create_last_name">Last name</string>
    <string name="edit_text_hint_employee_create_password">Password</string>
    <string name="edit_text_hint_employee_create_password_confirm">Confirm password</string>
    <string name="alert_dialog_product_delete">Deleting Product&#8320;</string>
    <string name="alert_dialog_product_delete_success">The product was successfully deleted.</string>
    <string name="alert_dialog_product_delete_failure">An issue was encountered when attempting to delete the product. You can try again to delete the product.</string>
    <string name="alert_dialog_products_load_failure">Unable to load products listing.</string>
    <string name="alert_dialog_product_delete_confirm">Are you sure you want to delete this product? This action cannot be undone.</string>
    <string name="alert_dialog_no_employees_exist">No employees exist, please create an employee now.</string>
    <string name="alert_dialog_employee_id_empty">Employee ID must provided.</string>
    <string name="alert_dialog_employee_password_empty">Password must provided.</string>
    <string name="alert_dialog_signing_in">Signing in&#8320;</string>
    <string name="alert_dialog_employee_create">Creating employee&#8320;</string>
    <string name="alert_dialog_employee_sign_in_failed">Employee sign in failed. Please try again.</string>
    <string name="alert_dialog_employee_create_failed">The employee could not be created. Please try again.</string>
    <string name="alert_dialog_products_loading">Loading Products</string>
    <string name="alert_dialog_product_save">Saving Product&#8320;</string>
    <string name="alert_dialog_product_save_success">The product was successfully saved.</string>
    <string name="alert_dialog_product_save_failure">An issue was encountered when attempting to save the product. The changes were not saved.</string>
    <string name="alert_dialog_employee_create_validation_first_name">First name may not be empty.</string>
    <string name="alert_dialog_employee_create_validation_last_name">Last name may not be empty.</string>
    <string name="alert_dialog_employee_create_validation_password">Password may not be empty.</string>
    <string name="alert_dialog_employee_create_validation_password_invalid">Passwords do not match.</string>
    <string name="alert_dialog_functionality_not_available">This functionality is not yet available.</string>
    <string name="validation_product_lookup_code">Product lookup code may not be empty.</string>
    <string name="validation_product_count">Product count must be a number and may not be negative.</string>
    <string name="intent_extra_employee">intent_extra_employee</string>
    <string name="intent_extra_product">intent_extra_product</string>
    <string name="title_activity_create_employee">CreateEmployeeActivity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
