<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_product_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.uark.uarkregisterapp.ProductViewActivity"
    tools:showIn="@layout/activity_product_view">

    <TextView
        android:id="@+id/text_view_product_lookup_code"
        android:text="@string/text_view_label_products_lookup_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_text_product_lookup_code"
        android:hint="@string/text_view_products_lookup_code"
        android:inputType="text"
        android:layout_below="@+id/text_view_product_lookup_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/text_view_product_count"
        android:text="@string/text_view_label_products_count"
        android:layout_below="@+id/edit_text_product_lookup_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_text_product_count"
        android:hint="@string/text_view_products_count"
        android:inputType="number"
        android:layout_below="@+id/text_view_product_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/text_view_product_created_on"
        android:text="@string/text_view_label_products_created_on"
        android:layout_width="wrap_content"
        android:layout_below="@+id/edit_text_product_count"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_text_product_created_on"
        android:hint="@string/text_view_products_created_on"
        android:inputType="date"
        android:enabled="false"
        android:layout_below="@+id/text_view_product_created_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>

    <ImageButton
        android:id="@+id/button_activity_edit_delete"
        android:src="@mipmap/ic_delete_forever_black_24dp"
        android:contentDescription="@string/button_delete"
        android:onClick="deleteButtonOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarButtonStyle"/>

    <ImageButton
        android:id="@+id/button_activity_edit_save"
        android:src="@mipmap/ic_save_black_24dp"
        android:contentDescription="@string/button_save"
        android:onClick="saveButtonOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarButtonStyle"/>

</RelativeLayout>
