<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_create_employee"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.uark.uarkregisterapp.CreateEmployeeActivity"
    tools:showIn="@layout/activity_create_employee">

    <EditText
        android:id="@+id/edit_text_employee_create_first_name"
        android:hint="@string/edit_text_hint_employee_create_first_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_text_employee_create_last_name"
        android:hint="@string/edit_text_hint_employee_create_last_name"
        android:inputType="text"
        android:layout_below="@+id/edit_text_employee_create_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/edit_text_employee_create_password"
        android:hint="@string/edit_text_hint_employee_create_password"
        android:inputType="textPassword"
        android:layout_below="@+id/edit_text_employee_create_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/edit_text_employee_create_password_confirm"
        android:hint="@string/edit_text_hint_employee_create_password_confirm"
        android:inputType="textPassword"
        android:layout_below="@+id/edit_text_employee_create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>

    <ImageButton
        android:id="@+id/button_employee_save"
        android:src="@mipmap/ic_save_black_24dp"
        android:contentDescription="@string/button_save"
        android:onClick="saveButtonOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarButtonStyle"/>

</RelativeLayout>
