<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.uark.uarkregisterapp.MainActivity"
    tools:showIn="@layout/activity_main">

<TextView
    android:id="@+id/text_view_employee_welcome"
    android:textSize="25sp"
    android:layout_centerHorizontal="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

<Button
    android:id="@+id/button_begin_transaction"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/text_view_employee_welcome"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="30dp"
    android:text="@string/button_begin_transaction"
    android:onClick="beginTransactionButtonOnClick"/>

<Button
    android:id="@+id/button_product_sales_report"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/button_begin_transaction"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:text="@string/button_product_sales_report"
    android:onClick="productSalesReportButtonOnClick"/>

<Button
    android:id="@+id/button_cashier_sales_report"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/button_product_sales_report"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:text="@string/button_cashier_sales_report"
    android:onClick="cashierSalesReportButtonOnClick"/>

<Button
    android:id="@+id/button_create_employee"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/button_cashier_sales_report"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:text="@string/button_create_employee"
    android:onClick="createEmployeeButtonOnClick"/>

<Button
    android:id="@+id/button_log_out"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/button_create_employee"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="50dp"
    android:text="@string/button_log_out"
    android:onClick="logOutButtonOnClick"/>

</RelativeLayout>