<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_landing"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uark.uarkregisterapp.LandingActivity">

    <TextView
        android:id="@+id/text_view_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/text_view_landing_welcome"/>

    <Button
        android:id="@+id/button_list_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/button_all_products"
        android:onClick="displayAllProductsButtonOnClick"/>

    <Button
        android:id="@+id/button_create_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_list_products"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/button_create_product"
        android:onClick="createProductButtonOnClick"/>

</RelativeLayout>
